# etxe

./: .editorconfig  .gitignore  .golangci.yml  CONTRIBUTING.md  Cargo.toml  LICENSE.md  MAINTAINERS.md  README.md  codecov.yml  go.mod  go.sum  justfile  root.tf  rustfmt.toml  sample.etx  sample.hcl
.github/workflows/: build.yml  codeql-analysis.yml
cmd/cli/: main.go
cmd/wasm/: main.go
core/: Cargo.toml
core/src/: error.rs
internal/plugin/: gen.go  grpc_broker.pb.go  grpc_broker.proto  grpc_broker_grpc.pb.go  grpc_controller.pb.go  grpc_controller.proto  grpc_controller_grpc.pb.go  grpc_stdio.pb.go  grpc_stdio.proto  grpc_stdio_grpc.pb.go
pkg/dag/: dag.go  dag_test.go  errors.go  set.go  set_test.go
pkg/etx/: Comments_test.go  README.md  ast.go  ast_test.go  attribute.go  attribute_test.go  block.go  block_test.go  comment.go  decl.go  decl_test.go  expr.go  expr_test.go  func.go  func_test.go  ident.go  ident_test.go  lambda.go  lambda_test.go  lexer.go  parser.go  parser_test.go  type.go  type_test.go  utils.go  utils_test.go  val_bool.go  val_ident.go  val_ident_test.go  val_mapentry.go  val_number.go  val_number_test.go  val_string.go  val_string_test.go  value.go  value_bool_test.go  value_heredoc_test.go  value_list_test.go  value_map_test.go  value_number_test.go  (+3 more)
pkg/jsv/: assign.go  assign_test.go  value.go
plugin/: attribute.go  data_source.go  provider.go  resource.go
provider/: provider.go
provider/plugin/: client.go  errors.go  grpc_broker.go  grpc_controller.go  grpc_server.go  grpc_stdio.go  mtls.go  plugin.go  protocol.go  server.go
providers/basic/: main.go
rdl_parser/: Cargo.toml
rdl_parser/src/: ast.rs  lexer.rs  lib.rs  parser_source.rs  position.rs  source.rs  token.rs
rdl_parser/src/pos/: location.rs  mod.rs  span.rs  spanned.rs
rdl_parser/tests/: lexer_test.rs
src/: cli.rs  lib.rs  utils.rs
src/parser/: ast.rs  grammar.pest  grammar.rs  mod.rs
web/: pnpm-lock.yaml  pnpm-workspace.yaml
web/app/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  (+1 more)
(+27 files in other folders)
