[package]
name          = "etxe"
version       = "0.0.1"
authors       = ["Xavier Basty-Kjellberg <xavier@hexbee.net>"]
description   = "IaC done right."
license-file  = "LICENSE"
keywords      = ["iac", "hcl", "infrastructure"]
categories    = ["config", "development-tools"]
homepage      = "https://github.com/hexbee-net/etxe"
repository    = "https://github.com/hexbee-net/etxe"
readme        = "README.md"
edition       = "2018"

[[bin]]
name = "etxe-cli"
path = "src/cli.rs"

[lib]
name = "etxe"
path = "src/lib.rs"


[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"
clap = "2.33.3"
colored = "2"
textwrap = { version = "0.14", features = ["hyphenation", "terminal_size"] }
tracing = "0.1"
tracing-subscriber = "0.2"
