[package]
name          = "etxe_rdl_parser"
version       = "0.1.0"
authors       = ["Xavier Basty-Kjellberg <xavier@hexbee.net>"]
edition       = "2018"

license       = "Apache-2.0"

description   = "The parser for the Etxe resource declaration language"

build = "build.rs"

[dependencies]
etxe_core = { path = "../core", version = "0.0.1" }
codespan = "0.11"
codespan-reporting = "0.11"
itertools = "0.10"
lalrpop-util = "0.19"
log = "0.4"
ordered-float = "2.8"
quick-error = "2.0"
regex = "1"
unic-ucd-ident = "0.9"


[build-dependencies]
lalrpop = "0.19"
